fixed start functions list padding on small screens

--- a/democracy/page/default_page/css/default_page.css
+++ b/democracy/page/default_page/css/default_page.css
@@ -359,7 +359,10 @@ body {
     margin-right: 7px;
     color: #CCCCCC;
     margin-top: -2px;
+    margin-left: -20px;
+    margin-right: 15px;
 }
 .welcome-right li{
     padding-top: 5px;
+    margin-left: 20px;
 }
